@@ -1,7 +1,6 @@
 package com.nike.backstopper.apierror;
 
 import com.nike.backstopper.util.ApiErrorUtil;
-
 import java.util.Collections;
 import java.util.Map;
 
@@ -18,13 +17,16 @@ import java.util.Map;
 public class ApiErrorBase implements ApiError {
 
     private final String name;
+
     private final String errorCode;
+
     private final String message;
+
     private final int httpStatusCode;
+
     private final Map<String, Object> metadata;
 
-    public ApiErrorBase(String name, String errorCode, String message, int httpStatusCode,
-                        Map<String, Object> metadata) {
+    public ApiErrorBase(String name, String errorCode, String message, int httpStatusCode, Map<String, Object> metadata) {
         if (name == null) {
             throw new IllegalArgumentException("ApiError name cannot be null");
         }
@@ -38,10 +40,7 @@ public class ApiErrorBase implements ApiError {
         if (metadata == null) {
             metadata = Collections.emptyMap();
         }
-
-        this.metadata = (metadata.isEmpty())
-                        ? Collections.emptyMap()
-                        : Map.copyOf(metadata);
+        this.metadata = (metadata.isEmpty()) ? Collections.emptyMap() : Map.copyOf(metadata);
     }
 
     public ApiErrorBase(String name, int errorCode, String message, int httpStatusCode, Map<String, Object> metadata) {
@@ -69,7 +68,7 @@ public class ApiErrorBase implements ApiError {
      */
     @Override
     public String getName() {
-        return name;
+        throw new UnsupportedOperationException("STUB: not implemented");
     }
 
     /**
@@ -77,7 +76,7 @@ public class ApiErrorBase implements ApiError {
      */
     @Override
     public String getErrorCode() {
-        return errorCode;
+        throw new UnsupportedOperationException("STUB: not implemented");
     }
 
     /**
@@ -85,7 +84,7 @@ public class ApiErrorBase implements ApiError {
      */
     @Override
     public String getMessage() {
-        return message;
+        throw new UnsupportedOperationException("STUB: not implemented");
     }
 
     /**
@@ -93,7 +92,7 @@ public class ApiErrorBase implements ApiError {
      */
     @Override
     public int getHttpStatusCode() {
-        return httpStatusCode;
+        throw new UnsupportedOperationException("STUB: not implemented");
     }
 
     /**
@@ -101,18 +100,17 @@ public class ApiErrorBase implements ApiError {
      */
     @Override
     public Map<String, Object> getMetadata() {
-        return metadata;
+        throw new UnsupportedOperationException("STUB: not implemented");
     }
 
     @Override
     @SuppressWarnings("EqualsWhichDoesntCheckParameterClass")
     public boolean equals(Object o) {
-        return ApiErrorUtil.isApiErrorEqual(this, o);
+        throw new UnsupportedOperationException("STUB: not implemented");
     }
 
     @Override
     public int hashCode() {
-        return ApiErrorUtil.generateApiErrorHashCode(this);
+        throw new UnsupportedOperationException("STUB: not implemented");
     }
-
 }
